--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ disqus_username: figofuture
 # Duoshuo settings
 duoshuo_username: figofuture
 # Share component is depend on Comment so we can NOT use share only.
-duoshuo_share: true                     # set to false if you want to use Comment without Sharing
+duoshuo_share: false                     # set to false if you want to use Comment without Sharing
 
 
 
