--- a/_config.yml
+++ b/_config.yml
@@ -93,6 +93,9 @@ friends: [
         title: "脉脉不得语的技术博客",
         href:  "http://www.inferjay.com"
     },{
+        title: "Jake Wharton",
+        href:  "http://jakewharton.com"
+    },{
         title: "Cyril Mottier",
         href:  "http://cyrilmottier.com"
     },{
