--- a/_config.yml
+++ b/_config.yml
@@ -93,6 +93,21 @@ friends: [
         title: "脉脉不得语的技术博客",
         href:  "http://www.inferjay.com"
     },{
+        title: "codeKK Android 开源项目集合",
+        href:  "http://www.codekk.com"
+    },{
+        title: "Trinea",
+        href:  "http://www.trinea.cn"
+    },{
+       title: "Gracker",
+       href:  "http://androidperformance.com"
+    },{
+       title: "23CODE android经典开源代码分享",
+       href:  "http://www.23code.com"
+    },{
+       title: "泡在网上的日子",
+       href:  "http://www.jcodecraeer.com"
+    },{
         title: "Jake Wharton",
         href:  "http://jakewharton.com"
     },{
