--- a/_config.yml
+++ b/_config.yml
@@ -108,6 +108,9 @@ friends: [
        title: "泡在网上的日子",
        href:  "http://www.jcodecraeer.com"
     },{
+       title: "V2EX",
+       href:  "http://www.v2ex.com"
+    },{
         title: "Jake Wharton",
         href:  "http://jakewharton.com"
     },{
