--- a/_config.yml
+++ b/_config.yml
@@ -117,6 +117,9 @@ friends: [
         title: "Square Engineering Blog",
         href:  "https://corner.squareup.com"
     },{
+        title: "NimbleDroid Blog",
+        href:  "http://blog.nimbledroid.com"
+    },{
         title: "Jake Wharton",
         href:  "http://jakewharton.com"
     },{
