--- a/_config.yml
+++ b/_config.yml
@@ -45,9 +45,9 @@ kramdown:
 disqus_username: figofuture
 
 # Duoshuo settings
-duoshuo_username: figofuture
+duoshuo_username: 
 # Share component is depend on Comment so we can NOT use share only.
-duoshuo_share: true                     # set to false if you want to use Comment without Sharing
+duoshuo_share: false                     # set to false if you want to use Comment without Sharing
 
 
 
