--- a/_config.yml
+++ b/_config.yml
@@ -131,6 +131,9 @@ friends: [
         title: "Fernando Cejas",
         href:  "http://fernandocejas.com"
     },{
+        title: "Mehdi Sakout",
+        href:  "http://medyo.github.io"
+    },{
         title: "Yet Another Coder's Blog",
         href:  "http://blog.egorand.me"
     },{
